--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,5 @@ bind C-a send-prefix
 unbind C-b
 
 # Get mouse working
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
